# july-engine-libs

./: .gitmodules
python/llama_gguf/: __init__.py  chat_handlers.py  context.py  llama_gguf.py  pyproject.toml  resource_calculator.py
python/routers/: pyproject.toml
python/routers/july_routers/: anthropic.py  bridge_interface.py  calculator.py  july.py  openai.py  search.py  services_router.py
python/telemetry/: pyproject.toml
python/telemetry/july_telemetry/: metrics.py  otel.py
