[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llama-gguf"
version = "1.0.0"
description = "Abstração de inferência GGUF via llama-cpp-python para o ecossistema July"
requires-python = ">=3.10"
dependencies = [
    "llama-cpp-python",
    "nvidia-ml-py",
    "httpx",
    "huggingface-hub>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["llama_gguf*"]
